--- a/assets/custom/pdf.css
+++ b/assets/custom/pdf.css
@@ -1,71 +1,55 @@
-.member-section{
-    width: 100%;
-    float: left;
-    padding: 10px;
+.main-card{
+    background: #000;
+    /* padding: 8px; */
+    color: #fff;
+    width: 35%;
+    margin: auto;
+    border-radius: 5px;
 }
 
-.member-details{
-    padding: 15px;
+div.qr-code-holder{
+    width: 80px;
+    height: 80px;
+    /* background: #fff; */
+    max-width: 8px;
+    position: fixed;
+    float: right;
+    top: 0;
+    left: 820px;
+    margin-top: 8px;
+}
+
+div.profile-photo-holder{
+    width: 80px;
+    height: 80px;
+    /* background: #fff; */
+    position: fixed;
+    top: 0;
+    left: 444px;
+    margin-top: 8px;
 }
 
 .member-photo{
     width: 100%;
-    margin: 10px;
+    height: 80px;
 }
 
 table{
     width: 100%;
+    margin-bottom: 8px;
+}
+table, th, td {
+    border-bottom: 1px solid #fff;
+    border-collapse: collapse;
+    padding: 4px;
+    color: #fff;
 }
 
-table tr th{
-    width: 25%;
-    padding: 15px;
-    text-align: left;
+td{
+    padding-left: 5px;
 }
 
-table.left{
-    text-align: left;
-}
-
-div.row{
-    float: left;
-    width: 100%;
-}
-.col-2{
-    float: left;
-    width: 16.6667%;
-}
-.col-3{
-    float: left;
-    width: 25%;
-}
-
-div.col-4{
-    float: left;
-    width: 33.3333%;
-}
-
-div.col-6{
-    float: left;
-    width: 50%;
-}
-
-div.col-9{
-    float: left;
-    width: 75%; 
-}
-
-.col-10{
-    float: left;
-    width: 83.3333%;
-}
-
-p, h3{
-    margin: 0;
-    padding: 0;
-}
-
-.member-details h3{
-    margin-bottom: 10px;
-    color: rgb(36, 189, 212);
+td.head{
+    text-align: right;
+    opacity: 0.75;
 }
